cli(tree-sitter): generate

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.2",
   "description": "A tree-sitter grammar for go.mod files",
   "main": "bindings/node",
+  "types": "bindings/node",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "node-gyp-build",
+    "prebuildify": "prebuildify --napi --strip"
   },
   "repository": {
     "type": "git",
@@ -14,6 +17,14 @@
     "tree-sitter",
     "go"
   ],
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**"
+  ],
   "author": "Camden Cheek <camden@ccheek.com>",
   "license": "MIT",
   "bugs": {
@@ -21,15 +32,27 @@
   },
   "homepage": "https://github.com/camdencheek/tree-sitter-gomod#readme",
   "dependencies": {
-    "nan": "^2.14.2"
+    "node-addon-api": "^7.1.0",
+    "node-gyp-build": "^4.8.0"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.0"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.19.4"
+    "tree-sitter-cli": "^0.19.4",
+    "prebuildify": "^6.0.0"
   },
   "tree-sitter": [
     {
       "scope": "source.gomod",
-      "file-types": ["go.mod"]
+      "file-types": [
+        "go.mod"
+      ]
     }
   ]
 }
